--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud Chatbot System</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Set this to your backend API base (e.g. https://api.example.com) -->
+    <meta name="api-endpoint" content="/api/messages">
 </head>
 <body>
     <div id="chat-container">
