Add Firebase deployment: Cloud Functions backend, Hosting frontend, and deployment guide

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud Chatbot System</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Set this to your backend API base (e.g. https://api.example.com) -->
+    <!-- Firebase Hosting will serve from /api (see firebase.json rewrites) -->
     <meta name="api-endpoint" content="/api/messages">
 </head>
 <body>
